--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major"> Hello, my name<br />
-									is Brandy Rimes </h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<h1 class="major"> Hello! Thanks for visiting! </h1>
+									<p>My name is Brandy Rimes! I am a student at Lambda and I have created many different types of websites already. Our next project just so happens to be this very site you are visiting today! If you are interested in som design templates then feel free to visit: <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you enjoy and happy browsing! </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
