--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major"> Hello! Thanks for visiting! </h1>
-									<p>My name is Brandy Rimes! I am a student at Lambda and I have created many different types of websites already. Our next project just so happens to be this very site you are visiting today! If you are interested in som design templates then feel free to visit: <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you enjoy and happy browsing! </p>
+									<p>My name is Brandy Rimes! I am a student at Lambda and I have created many different types of websites already. Our next project just so happens to be this very site you are visiting today! If you are interested in some design templates then feel free to visit: <a href="https://html5up.net">HTML5 UP</a>. They have fully responsive sites, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you enjoy and happy browsing! </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
@@ -35,9 +35,10 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
+						<!--ABOUT Section - Literally about me -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
+									<h2 class="major">Brandy's Background</h2>
 									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
@@ -46,9 +47,10 @@
 							</section>
 
 						<!-- Panel -->
+						<!--Social Media-->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Amet lorem</h2>
+									<h2 class="major">Connect with Me!</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="inner">
@@ -64,9 +66,10 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
+						<!--Accomplishments-->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
+									<h2 class="major"> Accolades</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
@@ -75,9 +78,10 @@
 							</section>
 
 						<!-- Panel -->
+						<!--SHOWCASING-->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
+									<h2 class="major">Projects Completed </h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="gallery">
@@ -98,9 +102,10 @@
 							</section>
 
 						<!-- Panel -->
+						<!--FOLLOW ME-->
 							<section class="panel color4-alt">
 								<div class="intro color4">
-									<h2 class="major">Contact</h2>
+									<h2 class="major">Wanna follow my hardwork?</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="inner columns divided">
