TOOK AWAY ALL EXTRA BOXES

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<!--BEGIN EXTRA SPACE-
+									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"> <img src="images/gallery/fulls/04.jpg" alt="" /></a>
 									<div class="group span-4-5">
 										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
@@ -99,6 +100,7 @@
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 								</div>
+							-->
 							</section>
 
 						<!-- Panel -->
@@ -142,7 +144,7 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- Panel 
 							<section class="panel color2-alt">
 								<div class="intro color2">
 									<h2 class="major">Elements</h2>
@@ -410,7 +412,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</div>
 								</div>
 							</section>
-
+						END ELEMENT-->
+						
 						<!-- Copyright -->
 							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
