UPDATED BACKGROUND SECTION

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Brandy's Background</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<p>I was born and raised in Houston, Texas and have not known much else for most of my life. My rough background gave me the skills in life I needed to follow my passions no matter what. I graduated in 2013 and have always had a passion for programming. That passion grew as I endeavored to compete in coding challenges in high school. I began taking Computer Science as a Sophomore and completed Computer Science I-III through to my senior year. <br> <br> In the professional world I have done Insurance work for almost 6 years now and am licensed in the state of Texas but on the side I always knew it was just temporary until I could find a way to make my software engineering dream become a reality. I began to research different certifications and schooling that would teach me more than just earning a degree. I wanted to be able to apply myself in a way that went beyond the average teaching context.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
