Completed LEARN WITH ME PAGE COMPLETE WITH ICONS

--- a/index.html
+++ b/index.html
@@ -50,17 +50,20 @@
 						<!--Social Media-->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Connect with Me!</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Learn with Me!</h2>
+									<p>Part of learning how to design websites is learning what kind of shortcuts are available! What icons describe you best? <br> <br> 
+									To the right you will see some <strong>AWESOME</strong> icons that I feel I have earned as badges in life. If you are as interested in coding as I was feel free to clcik the link below and browse some awesome icons that may apply to you too! <br> <br>
+									<a href="https://fontawesome.com/icons?d=gallery">Font AWESOME Icons</a>.
+									</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-diamond"><span class="label">Lorem</span></span></li>
-										<li><span class="icon fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon fa-bar-chart"><span class="label">Amet</span></span></li>
-										<li><span class="icon fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon fa-anchor"><span class="label">Lorem</span></span></li>
+										<li><span class="icon fa-diamond"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon fa-chrome"><span class="label">Dolor</span></span></li>
+										<li><span class="icon fa-codepen"><span class="label">Sit</span></span></li>
+										<li><span class="icon fa-fort-awesome"><span class="label">Amet</span></span></li>
+										<li><span class="icon fa-tree"><span class="label">Nullam</span></span></li>
 									</ul>
 								</div>
 							</section>
