--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
 						<!--Accomplishments-->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major"> Accolades</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<h2 class="major"> Projects Completed at Lambda </h2>
+									<p>Below are just a few projects that I have put together to show case today! Check back in later to see an updated list.<br> 
+									<br>
+									This list may be short now but just give me a week and I am sure at least three more will be added because that is how Lambda rolls. <br> <br>
+										<a href="hhttps://github.com/Brimes7/UI-III-Flexbox/pulls">User Interface I-III- Flexbox</a> <br>
+										<a href= "https://github.com/Brimes7/Lambda-Hello/pulls">Lambda Hello TXT</a> <br>
+										<a href= "https://github.com/Brimes7/responsive-web-design-I/pulls"> Responsive Web Design </a>
+									</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -89,7 +95,7 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/fulls/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
