--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-						<!--Accomplishments-->
+						<!--Showcasing-->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major"> Projects Completed at Lambda </h2>
@@ -87,11 +87,11 @@
 							</section>
 
 						<!-- Panel -->
-						<!--SHOWCASING-->
+						<!--IMAGES-->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Projects Completed </h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Life After Lambda</h2>
+									<p>This section is a bit nerve wrecking to write because I don't know what life will be like but I do know one thing. I have been in Lambda for all of three weeks and in that amount of time I have probably learned more information then I did in my entire 3 years working with Computer Science. There are for sure some pretty big differences from those two but I have never felt this confident about designing websites and about how I code. I can't wait to update this section!</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
@@ -117,7 +117,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Wanna follow my hardwork?</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Just input your information and I'm sure at some point I will learn how to make this part interactive. <br> <br> In the meantime, standby :)</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
@@ -141,6 +141,7 @@
 											</ul>
 										</form>
 									</div>
+									<!---
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon fa-twitter"><a href="#">@untitled-tld</a></li>
@@ -150,6 +151,7 @@
 											<li class="icon fa-medium"><a href="#">medium.com/untitled</a></li>
 										</ul>
 									</div>
+								-->
 								</div>
 							</section>
 
