--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/fulls/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/Accolade1.jpg" alt="" /></a>
+
+										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/Checkmate.jpeg" alt="" /></a>
+
+										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/Success.jpeg" alt="" /></a>
 									</div>
 									<!--BEGIN EXTRA SPACE-
 									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"> <img src="images/gallery/fulls/04.jpg" alt="" /></a>
