Update new project

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
 									<p>Below are just a few projects that I have put together to show case today! Check back in later to see an updated list.<br> 
 									<br>
 									This list may be short now but just give me a week and I am sure at least three more will be added because that is how Lambda rolls. <br> <br>
-										<a href="hhttps://github.com/Brimes7/UI-III-Flexbox/pulls">User Interface I-III- Flexbox</a> <br>
+										<a href="https://github.com/Brimes7/UI-III-Flexbox/pulls">User Interface I-III- Flexbox</a> <br>
 										<a href= "https://github.com/Brimes7/Lambda-Hello/pulls">Lambda Hello TXT</a> <br>
-										<a href= "https://github.com/Brimes7/responsive-web-design-I/pulls"> Responsive Web Design </a>
+										<a href= "https://github.com/Brimes7/responsive-web-design-I/pulls"> Responsive Web Design </a> <br>
+										<a href="https://github.com/Brimes7/Sprint-Challenge-Redux-Smurfs">Redux Smurf Village </a>
 									</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
